--- a/index.css
+++ b/index.css
@@ -249,7 +249,6 @@ section.portfolio {
 }
 
 section.portfolio {
-  border: 1px solid red;
   margin-bottom: 200px;
   text-align: center;
 }
@@ -266,7 +265,6 @@ section.portfolio {
 .portfolio>nav {
   display: inline-block;
   vertical-align: top;
-  border:1px solid black;
   margin-top: 30px;
 }
 
@@ -274,14 +272,14 @@ section.portfolio {
   height: 5px;
   background-color: white;
   border-radius: 2px;
+  margin-top: 8px;
+  margin-bottom: 28px;
 }
 .portfolio>nav .bar-inner {
-  width: 30px;
   border-radius: 2px;
-  margin-top: 5px;
-  margin-bottom: 28px;
   height: 100%;
   background-color: #DC6465;
+  transition: all 0.3s;
 }
 
 .portfolio>nav .bar-inner.state-1 {
@@ -292,6 +290,13 @@ section.portfolio {
   width: 40px;
 }
 .portfolio>nav .bar-inner.state-3 {
-  margin-left: 144px;
+  margin-left: 140px;
   width: 94px;
+}
+
+.portfolio>.works {
+  position: relative;
+}
+section.portfolio .works > .big, section.portfolio .works > .small {
+  position: absolute;
 }
