--- a/index.css
+++ b/index.css
@@ -191,7 +191,7 @@ hr {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  font-family: 'Microsoft Yahei', Helvetica, Arial, sans-serif; ;
+  font-family: KaiTi;
   line-height: 1.8;
   font-size: 18px;
 }
