--- a/index.css
+++ b/index.css
@@ -31,6 +31,8 @@ ul, ol {
   top: 0;
   left: 0;
   width: 100%;
+  transition: all .5s;
+  color: #b7b7b7;
 }
 .topNavBarInner {
   padding: 0 16px;
@@ -54,6 +56,7 @@ ul, ol {
   font-size: 13px;
 }
 .topNavBar nav>ul>li {
+  color: inherit;
   float: right;
   margin-left: 17px;
   margin-right: 17px;
@@ -61,7 +64,7 @@ ul, ol {
 
 .topNavBar nav a {
   font-size: 12px;
-  color: #b7b7b7;
+  color: inherit;
   display: block;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -326,4 +329,26 @@ section.portfolio .works > .big, section.portfolio .works > .small {
 @keyframes loading {
   from {width: 0px; height: 0px; opacity: 1;}
   to{width: 60px; height: 60px; opacity: 0;}
+}
+.site-welcome {
+  display: none;
+}
+.site-welcome.active {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left:0;
+  bottom:0;
+  background: #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+.stick {
+  background: white;
+  padding: 10px 0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+  color: #5c5656;
+  z-index: 1;
 }
